# hpguppi_daq

./: .gitmodules  Dockerfile  README.md  ataconfig-port10000.yml  ataconfig-port9000.yml  configure_snaps.sh  configure_snaps_B.sh  docker-compose.yaml  gmon.out  hpguppi_init.sh  populate_meta.py  start_record.sh  start_record_in_x.py
src/: Makefile.am  atasnap_init.sh  config_hpguppi.yml  configure.ac  guppiraw_ibv_packetize_thread.c  hpguppi_ata_blade_beamformer_thread.c  hpguppi_ata_blade_mode.h  hpguppi_ata_blade_obs_rawdisk_thread.c  hpguppi_ata_fildisk_thread.c  hpguppi_ata_ibv_payload_order_thread.c  hpguppi_ata_obs_uvh5disk_thread.c  hpguppi_ata_xgpu_thread.c  hpguppi_ata_xintegration_thread.c  hpguppi_atasnap.c  hpguppi_atasnap.h  hpguppi_atasnap_control_thread.c  hpguppi_atasnap_ibv_voltage_ftp_thread.c  hpguppi_atasnap_ibv_voltage_only_ftp_thread.c  hpguppi_atasnap_ibv_voltage_only_thread.c  hpguppi_atasnap_ibv_voltage_thread.c  hpguppi_atasnap_obs_rawdisk_thread.c  hpguppi_atasnap_pkt_to_FTP_transpose.c  hpguppi_atasnap_pkt_to_xgpu_transpose.c  hpguppi_atasnap_pktsock_only_thread.c  hpguppi_atasnap_pktsock_thread.c  hpguppi_atasnap_rawdisk_thread.c  hpguppi_atasnap_voltage_thread.c  hpguppi_atasnap_xgpu_disk_thread.c  hpguppi_atasnap_xgpu_thread.c  hpguppi_blade.h  hpguppi_blade_ata_mode_a_capi.cpp  hpguppi_blade_ata_mode_a_capi.h  hpguppi_blade_ata_mode_a_config.h  hpguppi_blade_ata_mode_b_capi.cpp  hpguppi_blade_ata_mode_b_capi.h  hpguppi_blade_ata_mode_b_config.h  hpguppi_blade_ata_structs.h  hpguppi_blade_c_api.cpp  hpguppi_blade_capi.cpp  hpguppi_blade_capi.h  (+30 more)
src/m4/: .gitignore  ax_cxx_check_lib.m4  blade.m4  cuda.m4  hashpipe.m4  ibverbs.m4  radiointerferometryc99.m4  sla.m4  uvh5c99.m4  xgpu.m4
tests/: hashpipe_aux.py  transmit_and_verify.py
tests/transmitters/: test_ata_tx.py
tests/verification/: verify_ata.py
